trunk/Archive2/dd/e9ba9250b0f8bb/output
main.cpp:8:5: error: chosen constructor is explicit in copy-initialization
  T v3 = {f()}; // works if and only if the type of f() can be implicitly converted to a T
    ^    ~~~~~
main.cpp:2:12: note: constructor declared here
  explicit T(int) {}
           ^
1 error generated.
